Added import collection from Discogs collection.
Fast import: Import all informations excluded tracklist
Slow import! Import all informations including tracklist

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -120,6 +120,9 @@
             <a href="/collection?type=cd" class="block py-2 px-3 text-neutral-900 dark:text-white rounded-sm hover:bg-neutral-100 dark:hover:bg-neutral-800 md:hover:bg-transparent md:hover:text-green-600 md:dark:hover:text-green-400 md:p-0"><%= t('media.cds') %></a>
           </li>
           <li>
+            <a href="/collection?type=cassette" class="block py-2 px-3 text-neutral-900 dark:text-white rounded-sm hover:bg-neutral-100 dark:hover:bg-neutral-800 md:hover:bg-transparent md:hover:text-green-600 md:dark:hover:text-green-400 md:p-0"><%= t('media.cassettes') %></a>
+          </li>
+          <li>
             <a href="/wishlist" class="block py-2 px-3 text-neutral-900 dark:text-white rounded-sm hover:bg-neutral-100 dark:hover:bg-neutral-800 md:hover:bg-transparent md:hover:text-green-600 md:dark:hover:text-green-400 md:p-0"><%= t('nav.wishlist') %></a>
           </li>
         </ul>
